ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: murphy-movies-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "stickounet"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx  # ✅ Updated to use the new field
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: murphy-movies-service
                port:
                  number: 8080
